--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,15 +19,102 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 {% if user.is_authenticated %}
-                <a class = "nav-item nav-link" id="home" href = "/">Home</a>
-                <a class = "nav-item nav-link" id="logout" href = "/logout">Logout</a>
+                <!-- <a class = "nav-item nav-link" id="join" href = "/join">Join Game</a>
+                <a class = "nav-item nav-link" id="start" href = "/start">Start Game</a> -->
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#startButton" aria-controls="startButton">
+                Start Game
+                </button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#joinButton" aria-controls="joinButton">
+                Join Game
+                </button>
                 {%else%}
                 <a class = "nav-item nav-link" id="login" href = "/login">Login</a>
                 <a class = "nav-item nav-link" id="signUp" href = "/sign-up">Sign up</a>
                 {%endif%}
             </div>
           </div>
+
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="startButton" aria-labelledby="startButtonLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="startButtonLabel">Start Game</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <div class="dropdown mt-3">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Game Type
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Basketball</a></li>
+                    <li><a class="dropdown-item" href="#">Soccer</a></li>
+                    <li><a class="dropdown-item" href="#">Any</a></li>
+                  </ul>
+                </div>
+                  <div class="dropdown mt-3">
+
+                      <div>
+                          Location
+                      </div>
+                      <input type = "text" placeholder="Search..." >
+                  <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Location
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Basketball</a></li>
+                    <li><a class="dropdown-item" href="#">Soccer</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul> -->
+                </div>
+              <div class="dropdown mt-3">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    # of Players
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <input type="number" id="players" min="1" max="20" />
+                  <!--  <li><a class="dropdown-item" href="#">Basketball</a></li>
+                    <li><a class="dropdown-item" href="#">Soccer</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="joinButton" aria-labelledby="joinButtonLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="joinButtonLabel">Join Game</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <div class="dropdown mt-3">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Game Type
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Basketball</a></li>
+                    <li><a class="dropdown-item" href="#">Soccer</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </div>
+              <div class="dropdown mt-3">
+                  <div>
+                          Location
+                      </div>
+                      <input type = "text" placeholder="Search..." >
+                  <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                    Location
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#">Basketball</a></li>
+                    <li><a class="dropdown-item" href="#">Soccer</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul> -->
+                </div>
+              </div>
+            </div>
+
         </nav>
+
         {% with messages = get_flashed_messages(with_categories=true)%}
         {% if messages %}
             {% for category,message in messages %}
@@ -55,6 +142,8 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script type = "text/javascript" src = "{{ url_for('static',filename='index.js')}}"></script>
+
+
 
     </body>
 </html>
