Added current + total number of people. Added datetime to model

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -98,8 +98,20 @@
       </select>
     </div>
     <div class = "col-md-6">
-      <label for="numPeople" class="form-label">Number of People</label>
-      <input type="text" class="form-control" id="numPeople" placeholder="How many people you have" required>
+      <label for="currNumPeople" class="form-label">Current Number of People</label>
+      <input type="text" class="form-control" id="numPeople" placeholder="How many people you have?" required>
+    </div>
+    <div class = "col-md-6">
+      <label for="currNumPeople" class="form-label">Total Number of People</label>
+      <input type="text" class="form-control" id="numPeople" placeholder="How many people total do you want?" required>
+    </div>
+    <div class = "col-md-6">
+      <label for="currNumPeople" class="form-label">Current Number of People</label>
+      <input type="text" class="form-control" id="currNumPeople" placeholder="How many people you have?" required>
+    </div>
+    <div class = "col-md-6">
+      <label for="totalNumPeople" class="form-label">Total Number of People</label>
+      <input type="text" class="form-control" id="totalNumPeople" placeholder="How many people total do you want?" required>
     </div>
     <div class="col-12">
       <div class="form-check form-switch">
@@ -108,7 +120,7 @@
           </div>
     </div>
     <div class="col-md-6">
-      <label for="lat" class="form-label">latitude</label>
+      <label for="lat" class="form-label">Latitude</label>
       <input type="text" class="form-control" id="lat" placeholder="Input latitude or use your current location" required>
     </div>
     <div class="col-md-6">
