--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,9 +24,9 @@
                 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#startButton" aria-controls="startButton">
                 Start Game
                 </button>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#joinButton" aria-controls="joinButton">
+               <!--  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#joinButton" aria-controls="joinButton">
                 Join Game
-                </button>
+                </button> -->
                 {%else%}
                 <a class = "nav-item nav-link" id="login" href = "/login">Login</a>
                 <a class = "nav-item nav-link" id="signUp" href = "/sign-up">Sign up</a>
@@ -40,47 +40,57 @@
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
-                <div class="dropdown mt-3">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    Game Type
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#">Basketball</a></li>
-                    <li><a class="dropdown-item" href="#">Soccer</a></li>
-                    <li><a class="dropdown-item" href="#">Any</a></li>
-                  </ul>
-                </div>
-                  <div class="dropdown mt-3">
-
-                      <div>
-                          Location
-                      </div>
-                      <input type = "text" placeholder="Search..." >
-                  <!-- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    Location
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#">Basketball</a></li>
-                    <li><a class="dropdown-item" href="#">Soccer</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul> -->
-                </div>
-              <div class="dropdown mt-3">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
-                    # of Players
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <input type="number" id="players" min="1" max="20" />
-                  <!--  <li><a class="dropdown-item" href="#">Basketball</a></li>
-                    <li><a class="dropdown-item" href="#">Soccer</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li> -->
-                  </ul>
-                </div>
+                  <form class="row g-3" method="POST">
+                    <div class="col-12">
+                      <label for="gameName" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="gameName" placeholder="Name your game so others can find it" required>
+                    </div>
+                    <div class="col-md-6">
+                      <label for="sportSelect" class="form-label">Sport Type</label>
+                      <select class="form-select" name="sportSelect" aria-label="Default select example" required>
+                        <option selected>Pick your sport</option>
+                        <option value="basketball">Basketball</option>
+                        <option value="soccer">Soccer</option>
+                      </select>
+                    </div>
+                    <div class = "col-md-6">
+                      <label for="currNumPeople" class="form-label">Current Number of People</label>
+                      <input type="text" class="form-control" id="currNumPeople" placeholder="How many people you have?" required>
+                    </div>
+                    <div class = "col-md-6">
+                      <label for="totalNumPeople" class="form-label">Total Number of People</label>
+                      <input type="text" class="form-control" id="totalNumPeople" placeholder="How many people total do you want?" required>
+                    </div>
+                   <!-- <div class="col-12">
+                      <div class="form-check form-switch">
+                          <input class="form-check-input" type="checkbox" id="makePublic">
+                          <label class="form-check-label" for="flexSwitchCheckChecked">Make public</label>
+                          </div>
+                    </div> -->
+                    <div class="col-md-6">
+                      <label for="lat" class="form-label">Latitude</label>
+                      <input type="text" class="form-control" id="lat" placeholder="Input latitude or use your current location" required>
+                    </div>
+                    <div class="col-md-6">
+                      <label for="lng" class="form-label">Longitude</label>
+                      <input type="text" class="form-control" id="lng" placeholder="Input longitude or use your current location" required>
+                    </div>
+                    <div>
+                        <label class="form-label">Date/Time</label>
+                        <input type="datetime-local" class="form-control" id="dateTime">
+                    </div>
+                    <div class="col-12">
+                      <button type="button" class = "btn btn-primary" id = "getCurrentLocationBtn">Get current location <i class="bi bi-pin-map-fill"></i></button>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-primary">Create a game</button>
+                    </div>
+                </form>
               </div>
             </div>
 
 
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="joinButton" aria-labelledby="joinButtonLabel">
+            <!-- <div class="offcanvas offcanvas-start" tabindex="-1" id="joinButton" aria-labelledby="joinButtonLabel">
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="joinButtonLabel">Join Game</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -109,9 +119,6 @@
                     <li><a class="dropdown-item" href="#">Soccer</a></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                   </ul> -->
-                </div>
-              </div>
-            </div>
 
         </nav>
 
