--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,6 +8,37 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
         <title>{% block title %}Home{% endblock %}</title> <!-- blocks are changeable in child files-->
+
+        <!-- api key  -->
+    <title>Add Map</title>
+
+    <style type="text/css">
+      /* Set the size of the div element that contains the map */
+      #map {
+        height: 400px;
+        /* The height is 400 pixels */
+        width: 100%;
+        /* The width is the width of the web page */
+      }
+    </style>
+    <script>
+      // Initialize and add the map
+      function initMap() {
+        // The location of Uluru
+        const uluru = { lat: -25.344, lng: 131.036 };
+        // The map, centered at Uluru
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 4,
+          center: uluru,
+        });
+        // The marker, positioned at Uluru
+        const marker = new google.maps.Marker({
+          position: uluru,
+          map: map,
+        });
+      }
+    </script>
+
     </head>
     <body>
 
@@ -41,51 +72,51 @@
               </div>
               <div class="offcanvas-body">
                   <form class="row g-3" method="POST">
-                    <div class="col-12">
-                      <label for="gameName" class="form-label">Name</label>
-                      <input type="text" class="form-control" id="gameName" placeholder="Name your game so others can find it" required>
-                    </div>
-                    <div class="col-md-6">
-                      <label for="sportSelect" class="form-label">Sport Type</label>
-                      <select class="form-select" name="sportSelect" aria-label="Default select example" required>
-                        <option selected>Pick your sport</option>
-                        <option value="basketball">Basketball</option>
-                        <option value="soccer">Soccer</option>
-                      </select>
-                    </div>
-                    <div class = "col-md-6">
-                      <label for="currNumPeople" class="form-label">Current Number of People</label>
-                      <input type="text" class="form-control" id="currNumPeople" placeholder="How many people you have?" required>
-                    </div>
-                    <div class = "col-md-6">
-                      <label for="totalNumPeople" class="form-label">Total Number of People</label>
-                      <input type="text" class="form-control" id="totalNumPeople" placeholder="How many people total do you want?" required>
-                    </div>
-                   <!-- <div class="col-12">
-                      <div class="form-check form-switch">
-                          <input class="form-check-input" type="checkbox" id="makePublic">
-                          <label class="form-check-label" for="flexSwitchCheckChecked">Make public</label>
-                          </div>
-                    </div> -->
-                    <div class="col-md-6">
-                      <label for="lat" class="form-label">Latitude</label>
-                      <input type="text" class="form-control" id="lat" placeholder="Input latitude or use your current location" required>
-                    </div>
-                    <div class="col-md-6">
-                      <label for="lng" class="form-label">Longitude</label>
-                      <input type="text" class="form-control" id="lng" placeholder="Input longitude or use your current location" required>
-                    </div>
-                    <div>
-                        <label class="form-label">Date/Time</label>
-                        <input type="datetime-local" class="form-control" id="dateTime">
-                    </div>
-                    <div class="col-12">
-                      <button type="button" class = "btn btn-primary" id = "getCurrentLocationBtn">Get current location <i class="bi bi-pin-map-fill"></i></button>
-                    </div>
-                    <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Create a game</button>
-                    </div>
-                </form>
+    <div class="col-12">
+      <label for="gameName" class="form-label">Name</label>
+      <input type="text" class="form-control" id="gameName" name="gameName" placeholder="Name your game so others can find it" required>
+    </div>
+    <div class="col-md-6">
+      <label for="sportSelect" class="form-label">Sport Type</label>
+      <select class="form-select" name="sportSelect" aria-label="Default select example" required>
+        <option selected>Pick your sport</option>
+        <option value="basketball">Basketball</option>
+        <option value="soccer">Soccer</option>
+      </select>
+    </div>
+    <div class = "col-md-6">
+      <label for="currNumPeople" class="form-label">Current Number of People</label>
+      <input type="text" class="form-control" id="currNumPeople" name="currNumPeople" placeholder="How many people you have?" required>
+    </div>
+    <div class = "col-md-6">
+      <label for="totalNumPeople" class="form-label">Total Number of People</label>
+      <input type="text" class="form-control" id="totalNumPeople" name="totalNumPeople" placeholder="How many people total do you want?" required>
+    </div>
+    <div class="col-12">
+      <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" id="makePublic" name="makePublic">
+          <label class="form-check-label" for="flexSwitchCheckChecked">Make public</label>
+          </div>
+    </div>
+    <div class="col-md-6">
+      <label for="lat" class="form-label">Latitude</label>
+      <input type="text" class="form-control" id="lat" name="lat" placeholder="Input latitude or use your current location" required>
+    </div>
+    <div class="col-md-6">
+      <label for="lng" class="form-label">Longitude</label>
+      <input type="text" class="form-control" id="lng" name="lng" placeholder="Input longitude or use your current location" required>
+    </div>
+    <div class="col-md-6">
+        <label class="form-label">Date/Time</label>
+        <input type="datetime-local" class="form-control" id="dateTime" name="dateTime">
+    </div>
+    <div class="col-12">
+      <button type="button" class = "btn btn-primary" id="getCurrentLocationBtn" name="getCurrentLocationBtn">Get current location <i class="bi bi-pin-map-fill"></i></button>
+    </div>
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Create a game</button>
+    </div>
+</form>
               </div>
             </div>
 
@@ -150,7 +181,25 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script type = "text/javascript" src = "{{ url_for('static',filename='index.js')}}"></script>
 
+        <!-- <iframe>
+          width="600"
+          height="450"
+          style="border:0"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbfJSrQpiU7m3TrZUR47gLJCBRfC44gys&q=Space+Needle,Seattle+WA">
+        </iframe> -->
 
+        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+        <h3>My Google Maps Demo</h3>
+        <!--The div element for the map -->
+        <div id="map"></div>
+
+        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+        <script
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbfJSrQpiU7m3TrZUR47gLJCBRfC44gys&callback=initMap&libraries=&v=weekly"
+          async
+        ></script>
 
     </body>
 </html>
