--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -7,7 +7,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
               rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous"/>
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <link rel="stylesheet" type="text/css" href="./style.css" />
+
         <title>{% block title %}Home{% endblock %}</title> <!-- blocks are changeable in child files-->
+
     </head>
     <body>
 
