--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -44,6 +44,7 @@
 
     .map {
       width: 300px;
+      height: 400px;
     }
 
     .card-container h2 {
@@ -82,16 +83,20 @@
       cursor: pointer;
     }
   </style>
+<!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+        <!--The div element for the map-->
+        <div id="map" style = "margin-top:10%"></div>
 
-<div class = "w-100 bg-light rounded my-2" style = "height: 50em;"></div>
-<form class="row g-3" method="POST">
+        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+        <script
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbfJSrQpiU7m3TrZUR47gLJCBRfC44gys&callback=initMap&libraries=&v=weekly"
+          async
+        ></script>
+
+<!--<form class="row g-3" method="POST">
     <div class="col-12">
       <label for="gameName" class="form-label">Name</label>
-<<<<<<< HEAD
-      <input type="text" class="form-control" id="gameName" placeholder="Name your game so others can find it" required>
-=======
       <input type="text" class="form-control" id="gameName" name="gameName" placeholder="Name your game so others can find it" required>
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
     </div>
     <div class="col-md-6">
       <label for="sportSelect" class="form-label">Sport Type</label>
@@ -103,25 +108,6 @@
     </div>
     <div class = "col-md-6">
       <label for="currNumPeople" class="form-label">Current Number of People</label>
-<<<<<<< HEAD
-      <input type="text" class="form-control" id="numPeople" placeholder="How many people you have?" required>
-    </div>
-    <div class = "col-md-6">
-      <label for="currNumPeople" class="form-label">Total Number of People</label>
-      <input type="text" class="form-control" id="numPeople" placeholder="How many people total do you want?" required>
-    </div>
-    <div class = "col-md-6">
-      <label for="currNumPeople" class="form-label">Current Number of People</label>
-      <input type="text" class="form-control" id="currNumPeople" placeholder="How many people you have?" required>
-    </div>
-    <div class = "col-md-6">
-      <label for="totalNumPeople" class="form-label">Total Number of People</label>
-      <input type="text" class="form-control" id="totalNumPeople" placeholder="How many people total do you want?" required>
-    </div>
-    <div class="col-12">
-      <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" id="makePublic">
-=======
       <input type="text" class="form-control" id="currNumPeople" name="currNumPeople" placeholder="How many people you have?" required>
     </div>
     <div class = "col-md-6">
@@ -131,22 +117,11 @@
     <div class="col-12">
       <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="makePublic" name="makePublic">
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
           <label class="form-check-label" for="flexSwitchCheckChecked">Make public</label>
           </div>
     </div>
     <div class="col-md-6">
       <label for="lat" class="form-label">Latitude</label>
-<<<<<<< HEAD
-      <input type="text" class="form-control" id="lat" placeholder="Input latitude or use your current location" required>
-    </div>
-    <div class="col-md-6">
-      <label for="lng" class="form-label">Longitude</label>
-      <input type="text" class="form-control" id="lng" placeholder="Input longitude or use your current location" required>
-    </div>
-    <div class="col-12">
-      <button type="button" class = "btn btn-primary" id = "getCurrentLocationBtn">Get current location <i class="bi bi-pin-map-fill"></i></button>
-=======
       <input type="text" class="form-control" id="lat" name="lat" placeholder="Input latitude or use your current location" required>
     </div>
     <div class="col-md-6">
@@ -159,12 +134,11 @@
     </div>
     <div class="col-12">
       <button type="button" class = "btn btn-primary" id="getCurrentLocationBtn" name="getCurrentLocationBtn">Get current location <i class="bi bi-pin-map-fill"></i></button>
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
     </div>
     <div class="col-12">
       <button type="submit" class="btn btn-primary">Create a game</button>
     </div>
-</form>
+</form>-->
 
 <script>
   "use strict";
@@ -241,11 +215,7 @@
   getCurrentLocationBtn.addEventListener('click', e => {
     getLocation()
   });
-<<<<<<< HEAD
 
-=======
-  
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
   // On clicking the geolocation button, get location
   getLocation = () => {
     if (navigator.geolocation) {
@@ -262,16 +232,8 @@
     document.getElementById('lat').value = lat
     document.getElementById('lng').value = lng
 
-<<<<<<< HEAD
   }
   // Get form data from the HTML
   </script>
 
 {% endblock %}
-=======
-  }  
-  // Get form data from the HTML
-  </script>
-
-{% endblock %}
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
