--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,16 +4,6 @@
         <meta charset="utf-8"/>
         <meta name = "viewport" content = "width=device-width, initial-scale = 1"/>
 
-<<<<<<< HEAD
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-              rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous"/>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-        <link rel="stylesheet" type="text/css" href="./style.css" />
-
-        <title>{% block title %}Home{% endblock %}</title> <!-- blocks are changeable in child files-->
-
-=======
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
@@ -48,10 +38,9 @@
         });
       }
     </script>
-
->>>>>>> 77e7470936cf004bae09a1e995383825a4adbd27
     </head>
-    <body>
+    <body style="background: rgb(142,73,212);
+background: linear-gradient(90deg, rgba(142,73,212,1) 0%, rgba(45,194,162,1) 53%, rgba(0,212,255,1) 100%)">
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
@@ -74,6 +63,7 @@
                 <a class = "nav-item nav-link" id="signUp" href = "/sign-up">Sign up</a>
                 {%endif%}
             </div>
+              <h1 style="color:white; padding-right: 10%">Game Finder</h1>
           </div>
 
             <div class="offcanvas offcanvas-start" tabindex="-1" id="startButton" aria-labelledby="startButtonLabel">
@@ -200,17 +190,6 @@
           allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDbfJSrQpiU7m3TrZUR47gLJCBRfC44gys&q=Space+Needle,Seattle+WA">
         </iframe> -->
-
-        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-        <h3>My Google Maps Demo</h3>
-        <!--The div element for the map -->
-        <div id="map"></div>
-
-        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-        <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbfJSrQpiU7m3TrZUR47gLJCBRfC44gys&callback=initMap&libraries=&v=weekly"
-          async
-        ></script>
 
     </body>
 </html>
